--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "sklearn>=0.0.post12",
     "seaborn>=0.13.2",
     "scikit-learn>=1.6.1",
-    "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
+    "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
+    "grpcio>=1.70.0"
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
